alignment issues in startgame screen

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,10 @@
   .toast-message{
     width: auto;
   }
+
+  .w-auto{
+    width: auto;
+  }
 }
 
   @media screen and (max-width:600px) {
